--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
